# Job-engine

./: .gitignore  README.md  pyproject.toml
career_os/: __init__.py  ai.py  browser.py  cli.py  discovery.py  domain.py  latex_templates.py  pdf_utils.py  prompts.py  resume.py  storage.py  web.py
career_os/templates/: base.html  index.html
career_os/templates/partials/: companies.html  company_row.html  dashboard.html  opportunities.html  opportunity_row.html  resume.html  roles.html  tailored_result.html  workspace_detail.html  workspaces.html
tests/: test_ai.py  test_browser.py  test_discovery.py  test_latex.py  test_learning.py  test_pdf_utils.py  test_resume.py  test_storage.py  test_web.py
