[project]
name = "career-os"
version = "0.5.0"
description = "Local-first career application assistant"
requires-python = ">=3.11"
dependencies = [
    "groq>=1.0",
    "jinja2>=3.0",
    "pdfplumber>=0.7",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
include = ["career_os*"]

[project.scripts]
career-os = "career_os.cli:main"
career-os-web = "career_os.web:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
